--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     var wall2 = new THREE.Mesh(geometry, material);
     wall2.rotation.set( 0, -Math.PI/-1.2, 0 );
     wall2.position.x = -4;
-    wall2.position.z = -5.7;
+    wall2.position.z = -5.8;
     scene.add(wall2);
 
 
@@ -69,6 +69,11 @@
     directionalLight3.position.set(1, -1, 1);
     // シーンに追加
     scene.add(directionalLight3);
+    // 平行光源4
+    var directionalLight4 = new THREE.DirectionalLight(0xffffff);
+    directionalLight4.position.set(1, 1, -1);
+    // シーンに追加
+    scene.add(directionalLight4);
     
     
     tick();
