--- a/index.html
+++ b/index.html
@@ -48,9 +48,16 @@
     //壁2
     var wall2 = new THREE.Mesh(geometry, material);
     wall2.rotation.set( 0, -Math.PI/-1.2, 0 );
-    wall2.position.x = -3.9;
+    wall2.position.x = -3.95;
     wall2.position.z = -6.1;
     scene.add(wall2);
+    
+    //壁3
+    var wall3 = new THREE.Mesh(geometry, material);
+    wall3.rotation.set( 0, -Math.PI/1.2, 0 );
+    wall3.position.x = 3.95;
+    wall3.position.z = -6.1;
+    scene.add(wall3);
 
 
     
