--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
     //地面を作成
     var planeGeometry = new THREE.PlaneGeometry(50,50,50,50);
     var G = new THREE.Mesh(planeGeometry,mat);
-    G.receiveShadow = true;
     G.rotation.set( -Math.PI/2, 0, 0 );
-    G.position.set(0,-6.5,0);
+    G.position.set(0,,0);
     scene.add( G );
     
     // 壁を作成
