--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     var planeGeometry = new THREE.PlaneGeometry(50,50,50,50);
     var G = new THREE.Mesh(planeGeometry,mat);
     G.rotation.set( -Math.PI/2, 0, 0 );
-    G.position.set(0,,0);
+    G.position.set(0,0,0);
     scene.add( G );
     
     // 壁を作成
