--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     //大砲系
     //砲身（円柱）
     var cylinderGeometry = new THREE.CylinderGeometry( 0.5, 0.5, 2, 30 );
-    var cannon = new THREE.Mesh(geometry, mat3);
+    var cannon = new THREE.Mesh(cylinderGeometry, mat3);
     scene.add(cannon);
     
     
