--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     //砲身（円柱）
     var cylinderGeometry = new THREE.CylinderGeometry( 0.5, 0.5, 5, 30 );
     var cannon = new THREE.Mesh(cylinderGeometry, mat3);
-    cannon.rotation.set( 0, -Math.PI/1.2, 0 );
+    cannon.rotation.set( -Math.PI/1.2,0, 0 );
     scene.add(cannon);
     
     
