--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     mat2.map = wall_texture;
     
     //砲身のテクスチャ
-    var cannon_texture = textureLoader.load("metal_test.jpg");
+    var cannon_texture = textureLoader.load("metal.jpg");
     var mat3 = new THREE.MeshPhongMaterial();
     mat3.map = cannon_texture;
     
