--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     var wheel = new THREE.Mesh(WG, mat4);
     wheel.position.x = 1.2;
     wheel.position.y = 5;
-    wheel.rotation.set( 0,-Math.PI/2, 0 );
+    wheel.rotation.set( 0,0,-Math.PI/2);
     scene.add(wheel);
     
     
