--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     // カメラを作成
     var camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
     camera.position.set(50, 35, 15);
-    camera.set( -Math.PI/1.5, 0, 0 );
+    //camera.set( -Math.PI/1.5, 0, 0 );
     const controls = new THREE.OrbitControls(camera,document.body);
     
     //テクスチャ
