--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     sprite5.position.x = -5;
     sprite5.position.y = 2;
     sprite5.position.z = -1;
-    sprite5.scale.set(10,10,10);
+    sprite5.scale.set(5,5,5);
     scene.add(sprite5);
     
     // 平行光源1
@@ -229,6 +229,7 @@
       renderer.render(scene, camera);
   
       // 箱を回転させる
+      ball.position.z +=0.01;
 
 
     };
