--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     //壁のテクスチャ
     var wall_texture = textureLoader.load("stone_wall.jpg");
     var mat2 = new THREE.MeshLambertMaterial();
-    mat2.map = wall_texture;
+    mat2.bumpmap = wall_texture;
+    mat2.bumpscale=0.1;
     
     //砲身のテクスチャ
     var cannon_texture = textureLoader.load("metal.jpg");
