--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
      new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
      new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
   ];
-    var mat3 = new THREE.MeshPhongMaterial();
-    mat3.map = cannon_texture;
+    var mat3 = new THREE.MeshPhongMaterial(cannon_texture);
+    //mat3.map = cannon_texture;
     
     
     //車輪のテクスチャ
