--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     mat3.map = cannon_texture;
     */
     var  cannon_texture= [
-     new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
-     new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
-     new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/grass.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
   ];
     var mat3 = new THREE.MeshPhongMaterial(cannon_texture);
     //mat3.map = cannon_texture;
