--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
     */
     var  cannon_texture= [
      new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/grass.png")}),
-     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
-     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/grass.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/grass.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/grass.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/grass.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/grass.png")}),
   ];
     var mat3 = new THREE.MeshPhongMaterial(cannon_texture);
     //mat3.map = cannon_texture;
