--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
      new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
      new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
      new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("img/metal.png")}),
     ];
     var mat3 = new THREE.MeshFaceMaterial(cannon_texture);
     //mat3.map = cannon_texture;
