--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     
     
     var  cannon_texture= [
-     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal.png")}),
-     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal.png")}),
-     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("grass.png")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal.jpg")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal.jpg")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal_test.jpg")}),
     ];
     var mat3 = new THREE.MeshFaceMaterial(cannon_texture);
     //mat3.map = cannon_texture;
