--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     var  cannon_texture= [
      new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal.jpg")}),
      new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal.jpg")}),
-     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal_test.jpg")}),
+     new THREE.MeshPhongMaterial({map:THREE.ImageUtils.loadTexture("metal_front.jpg")}),
     ];
     var mat3 = new THREE.MeshFaceMaterial(cannon_texture);
     //mat3.map = cannon_texture;
