--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     cannon2.position.x = 9;
     cannon2.position.y = 21;
     cannon2.position.z = -15;
-    cannon2.rotation.set( -Math.PI/1.7,0, -Math.PI/1.2 );
+    cannon2.rotation.set( -Math.PI/1.7,0, -Math.PI/-1.2 );
     scene.add(cannon2);
     
     //車輪
@@ -195,7 +195,7 @@
     wheel2_2.position.x = 13.6;
     wheel2_2.position.y = 20.8;
     wheel2_2.position.z = -19.8;
-    wheel2_2.rotation.set( 0,0,-Math.PI/-2);
+    wheel2_2.rotation.set( 0,-Math.PI/-1.2,-Math.PI/-2);
     scene.add(wheel2_2);
     
     //砲弾
