--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     cannon2.position.x = 9;
     cannon2.position.y = 21;
     cannon2.position.z = -15;
-    cannon2.rotation.set( Math.PI/1.7,-Math.PI/1.2,-Math.PI/2);
+    cannon2.rotation.set( Math.PI/1.7,-Math.PI/1.2,0);
     scene.add(cannon2);
     
     //車輪
