--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
       //砲弾発車
       sprite1.position.y +=0.013;
       sprite1.position.z +=0.05;
+      
+      cannon2.position.z +=0.05;
 
 
     };
