--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       sprite1.position.y +=0.013;
       sprite1.position.z +=0.05;
       
-      cannon2.position.z +=0.05;
+      cannon2.rotation.z +=0.05;
 
 
     };
