--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     cannon2.position.x = 9;
     cannon2.position.y = 21;
     cannon2.position.z = -15;
-    cannon2.rotation.set(-Math.PI/1.7,-Math.PI/1.2, 0);
+    cannon2.rotation.set(-Math.PI/1.7,0, -Math.PI/1.2);
     scene.add(cannon2);
     
     //車輪
@@ -293,7 +293,7 @@
       sprite1.position.y +=0.013;
       sprite1.position.z +=0.05;
       
-      cannon2.rotation.z +=0.05;
+      //cannon2.rotation.z +=0.05;
 
 
     };
